--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -34,27 +34,23 @@
         android:textSize="30sp"
         android:textStyle="bold" />
 
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvListaMascotas"
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+        android:layout_marginBottom="0dp"
         android:layout_marginTop="280dp"
-        android:layout_marginBottom="8dp"
+
+        android:clipToPadding="true"
+        android:scrollbarStyle="insideInset"
 
         android:scrollbars="vertical"
-        android:clipToPadding="true"
-        android:padding="4dp"
-
-
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 </FrameLayout>
