--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -15,7 +15,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:src="@drawable/perro1"
-        android:layout_marginStart="75dp"
+        android:layout_marginStart="50dp"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
@@ -35,7 +35,7 @@
         android:textStyle="bold" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvListaMascotas"
+        android:id="@+id/rvListaMascotasgrid"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
