--- a/app/src/main/res/layout/mascota_detalle.xml
+++ b/app/src/main/res/layout/mascota_detalle.xml
@@ -18,10 +18,10 @@
 
         <ImageView
             android:id="@+id/imgMascota"
-            android:layout_width="200dp"
-            android:layout_height="190dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:padding="10dp"
-            android:layout_marginStart="90dp"
+            android:layout_marginStart="8dp"
             android:src="@drawable/perro1" />
 
         <LinearLayout
@@ -31,42 +31,44 @@
 
             <ImageButton
                 android:id="@+id/imgButton"
-                android:layout_width="77dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@android:color/background_light"
-                android:padding="8dp"
+                android:padding="10dp"
                 android:scaleType="centerInside"
                 android:src="@drawable/hueso" />
 
             <TextView
                 android:id="@+id/tvNombre"
-                android:layout_width="190dp"
-                android:layout_height="wrap_content"
+                android:layout_width="90dp"
+                android:layout_height="50dp"
 
                 android:padding="3dp"
                 android:text="@string/mascota1"
                 android:textAlignment="center"
 
-                android:textSize="30sp"
+                android:textSize="28sp"
 
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                />
 
             <TextView
                 android:id="@+id/tvRate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+                android:layout_width="50dp"
+                android:layout_height="50dp"
 
                 android:padding="5dp"
                 android:text="@string/rate"
 
-                android:textSize="40sp"
+                android:textAlignment="center"
+
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/imgRate"
-                android:layout_width="77dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
 
                 android:padding="10dp"
                 android:src="@drawable/hamarillo" />
